--- a/_data/sidebars/overview_sidebar.yml
+++ b/_data/sidebars/overview_sidebar.yml
@@ -55,6 +55,9 @@ entries:
       - title: Messages
         output: web
         subfolderitems:
+        - title: Allergy and Intolerance v1
+          url: /allergy_intolerance_1.html
+          output: web
         - title: Blood Spot Test Outcome
           url: /blood_spot_test_outcome_1.html
           output: web
